# PathTracingTutorial

./: README.md
Part_0/: README.md
Part_0/include/: ptScene.h
Part_0/shaders/: pt_compute.glsl  pt_fragment.glsl  pt_vertex.glsl
Part_0/src/: ptScene.cpp
Part_0/tests/: PathTracing.cpp
Part_1/: CMakeLists.txt  OpenGL 路径追踪 -- 附录 1：std430 layout.md  README.md
Part_1/include/: Material.h  Primitive.h  ptScene.h
Part_1/shaders/: pt_compute.glsl
Part_1/src/: ptScene.cpp
Part_2/: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Windows 平台路径追踪渲染器架构设计.md  default.hdr  vcpkg-configuration.json  场景描述.md
Part_2/.cursor/rules/: architecture.mdc
Part_2/HDRImageViewer/: CMakeLists.txt
Part_2/HDRImageViewer/include/: ControlPanel.h  HDRImageViewer.h  ImageWidget.h
Part_2/HDRImageViewer/shaders/: fragment.glsl  vertex.glsl
Part_2/HDRImageViewer/src/: ControlPanel.cpp  HDRImageViewer.cpp  ImageWidget.cpp
Part_2/include/: BVH.h  Bound.h  ImageLoader.h  MainWindow.h  Material.h  Primitive.h  Ray.h  Scene.h  SceneConfig.h  SceneConstants.cuh  SceneData.h  Texture.h  Triangle.h  config.h  cudaKernelFunctions.h  cuda_fake.h  mat4.h  math_utils.h  ptScene.h  random_pcg.cuh  vec2.h  vec3.h  vec4.h
Part_2/preview/: camera_controller.h  fullscreen_quad.vert  gl_display.cpp  gl_display.h  imgui_layer.cpp  imgui_layer.h  preview_window.cpp  preview_window.h  tone_mapping.frag
Part_2/scenes/: cornell_box.json  daycare.json  env_diffuse.json  evantra.json  nee_area_light.json
Part_2/shaders/: pt_fragment.glsl  pt_mix.glsl
Part_2/src/: BVH.cpp  ImageLoader.cpp  MainWindow.cpp  Scene.cpp  SceneConstants.cu  Texture.cpp  main.cpp  mixKernel.cu  pathTracingKernel.cu  pt.h  ptScene.cpp  renderer.cu  renderer.h
Part_2/src/accel/: bvh_builder.cpp  bvh_builder.h  bvh_common.h  bvh_traversal.cuh
Part_2/src/camera/: camera.h
Part_2/src/core/: interaction.h  ray.h
Part_2/src/cuda/: check.h  cuda_buffer.h  cuda_texture.cu  cuda_texture.h
Part_2/src/film/: film.cu  film.h  quality_metrics.h
Part_2/src/geometry/: shapes.cpp  shapes.h  triangle.h  vertex.h
Part_2/src/integrators/: direct_lighting.cuh  integrator.h  path.cu  path_integrator.h
Part_2/src/io/: gltf_loader.cpp  gltf_loader.h  image_io.cpp  image_io.h  mesh_loader.cpp  mesh_loader.h
Part_2/src/lights/: envmap.h  light_pdf.cuh  light_sampler.cpp  light_sampler.h  punctual_light.h
Part_2/src/materials/: disney_bsdf.cuh  material.h  microfacet.cuh  shading_utils.cuh
Part_2/src/math/: bounds.h  frame.h  mat4.h  math_utils.h  sampling.h  vecmath.h
Part_2/src/samplers/: pcg.cuh  sampler.cuh  sobol.cuh
Part_2/src/scene/: device_scene.cu  device_scene.h  scene.h  scene_loader.cpp  scene_loader.h  scene_manager.cpp  scene_manager.h
Part_2/tests/: PathTracing.cpp  testBVH.cpp  testHDRImageViewer.cpp  testImage.cpp  testTinyObj.cpp  test_bvh.cpp  test_math.cpp  test_sampling.cpp
Part_2/utils/: fix_clangd.py  rand_image.py
